<resources>
    <string name="app_name">HSE.Outlet</string>
    <string name="title_activity_scrolling">HSE Outlet</string>
    <string name="action_settings">Settings</string>
    <string name="add_product_setting">Add item</string>
    <string name="scrolling_menu_reg">Sign in/up</string>
    <string name="title_activity_product">ProductActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="product_name_format">Product #%d</string>
    <!-- Все что связано с работой юзеров -->
    <string name="password_entryform">Password</string>
    <string name="login_entryform">Enter</string>
    <string name="email_entryform">Email</string>
    <string name="question_entryform">Sign up</string>
    <string name="login">Login</string>
    <string name="UserName">Name</string>
    <string name="passwordreg">Password</string>
    <string name="emailreg">Email</string>
    <string name="backtoregistration">Already have an account?</string>
    <string name="registration_again">Repeat the password</string>
    <string name="registration_registrate">Registration</string>
    <string-array name="emailAddition">
        <item>\u0040edu.hse.ru</item>
        <item>\u0040hse.ru</item>
    </string-array>
    <!-- Все что связано с работой юзеров -->

    <string name="title_activity_add_item_parameters">Parameters</string>

    <!-- Strings related to adding item -->
    <string name="prompt_name_product">Product Name</string>
    <string name="prompt_description_product">Description</string>
    <string name="action_admit_parameters">ADD</string>
    <string name="parameters_empty">Product name and price are required</string>
    <string name="registrationpopup">Passwords do not match</string>
    <string name="popupbutton">OK</string>
    <string name="add_photo">Add Photo</string>
    <string name="delete_photo">Delete</string>
    <string name="full_screen">Full Screen</string>
    <string name="photo_picker_select_image">Select image from gallery</string>
    <string name="close">Close</string>
    <string name="registration_popup_1">Invalid input</string>
    <string name="price_hint">Price</string>
    <string name="submit_button">Submit</string>
    <string name="tags">Tags</string>
    <string name="add_tag">Add tag</string>

    <!-- Strings related to user page -->
    <string name="my_products">My products</string>
    <string name="bought_products">Bought</string>
    <string name="wishlist">Wishlist</string>
    <string name="userpage_title">User Page</string>
    <string name="log_out">Log out</string>

    <!-- Strings related to chat -->
    <string name="not_logged_text">You are not signed in</string>
    <string name="message_hint">Message...</string>
    <string name="chat_title">Chat with</string>

    <!-- Strings related to search -->
    <string name="swipe_to_search">Swipe down to start searching</string>
    <string name="search_hint">Search Products</string>

    <!-- Strings related to preferences -->
    <string name="change_view_title">Set products list view</string>
    <string name="change_view_summary">sets a list view</string>
    <string name="change_lang_title">Set Russian Language</string>
    <string name="change_lang_summary">sets russian language</string>
    <string name="settings_title">Settings</string>

    <!-- Strings related to registration -->
    <string name="registration">Registration</string>
    <string name="firebase_failure">Failure. Maybe no internet connection?</string>
    <string name="firebase_not_confirmed">Your email is not confirmed</string>
    <string name="firebase_wrong_password">Wrong login or password</string>
    <string name="firebase_passwords_match">Passwords do not match</string>
    <string name="firebase_password_short">Password is too short</string>
    <string name="firebase_email_confirm">Please confirm your email</string>
    <string name="firebase_email_taken">That email is already used</string>


    <string name="all_items">All Items</string>
    <string name="items_list">Products</string>
    <string name="product_description">Description:</string>
    <string name="product_tags">Tags:</string>
    <string name="enter_account">Sign in</string>
    <string name="add_product">Add product</string>

    <string name="added_products">Added products</string>
    <string name="your_wishlist">Your Wishlist</string>
    <string name="deleted_products">Deleted product</string>
    <string name="chats_title">Chats</string>
    <string name="rub"> RUR</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="price">Price:</string>
    <string name="fail">Fail. Try again.</string>
    <string name="contacts">Seller contacts</string>
    <string name="product_bought">Product is sold</string>
    <string name="no_images">No Images</string>
    <string name="write_to_user">Write to user</string>
    <string name="empty_description">Description is empty</string>
    <string name="products">Products</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
