<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    tools:context="com.example.s1k0de.entry.RegistrationFormActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:background="#ffffff">>
        <!--  Header Starts-->
        <RelativeLayout android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="@layout/header_registration"
            android:paddingTop="5dip"
            android:paddingBottom="5dip"
            android:weightSum="1"
            android:layout_alignParentTop="true">

            <!-- Registration Form -->
            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dip"
                android:layout_marginTop="30dp"
                android:layout_below="@id/header">
                <!-- Full Name Label -->
                <TextView android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:text="@string/UserName"/>
                <EditText android:id="@+id/reg_fullname"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:maxLines="1"
                    android:layout_marginBottom="20dip"/>
                <!--  Email Label -->
                <TextView android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:text="@string/emailreg"/>
                <EditText android:id="@+id/reg_email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:maxLines="1"
                    android:layout_marginBottom="20dip"/>
                <!-- Password Label -->
                <TextView android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:text="@string/passwordreg"/>
                <EditText android:id="@+id/reg_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:layout_marginTop="5dip"
                    android:layout_marginBottom="20dip"/>
                <TextView android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:text="@string/registration_again"/>
                <EditText android:id="@+id/reg_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:layout_marginTop="5dip"/>
                <!-- Register Button -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <Button
                        android:id="@+id/btnRegister"

                        android:text="@string/registration_registrate"
                        android:textColor="#ffffff"
                        android:textSize="23sp"
                        android:textAllCaps="false"
                        android:layout_marginTop="18dp"
                        android:layout_width="fill_parent"
                        android:layout_centerInParent="true"
                        android:layout_height="40dp"
                        android:background="@layout/button_registration"
                        android:layout_alignParentTop="true" />
                </RelativeLayout>
                <!-- Link to Login Screen -->
                <TextView android:id="@+id/link_to_login"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dip"
                    android:layout_marginBottom="40dip"
                    android:text="@string/backtoregistration"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:textColor="#f3f3f3"/>
            <!-- Registration Form Ends -->
                <!-- Login button -->
                <!-- Link to Registration Screen -->

            </LinearLayout>
        </RelativeLayout>
        <!--  Header Ends -->
        <!-- Footer Start -->
        <LinearLayout android:id="@+id/footer"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
        </LinearLayout>
        <!-- Footer Ends -->
    </RelativeLayout>
</ScrollView>