<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:id="@+id/RelativeLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <EditText
            android:id="@+id/item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/item_description"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/item_description"
            android:layout_marginTop="30dp"
            android:hint="@string/prompt_name_product"
            android:inputType="text"
            android:maxLines="1" />

        <EditText
            android:id="@+id/item_description"
            android:layout_width="match_parent"
            android:layout_height="121dp"

            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/item_name"
            android:layout_marginTop="16dp"
            android:hint="@string/prompt_description_product"
            android:inputType="textMultiLine"
            android:maxLines="6"
            android:scrollbars="vertical" />

        <EditText
            android:id="@+id/item_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/item_description"
            android:layout_marginTop="12dp"
            android:hint="@string/price_hint"
            android:inputType="number" />


        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/item_price"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">


            <HorizontalScrollView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_weight="1">

                <LinearLayout
                    android:id="@+id/photos_2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                </LinearLayout>
            </HorizontalScrollView>

            <Button
                android:id="@+id/select_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:onClick="onImageGalleryClicked"
                android:text="@string/add_photo" />
        </LinearLayout>

        <TextView
            android:id="@+id/empty_parameters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:text="@string/parameters_empty"
            android:textColor="#ff0000"
            android:textSize="20sp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@layout/button_login_and_registration"
            android:gravity="center_horizontal|center_vertical"
            android:onClick="buttonOnClick"
            android:text="Submit" />
        <TextView
            android:id="@+id/test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="19dp"
            android:text="TextView" />

    </RelativeLayout>
</ScrollView>
