<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    tools:context="com.example.s1k0de.entry.EntryFormActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:background="#ffffff">>
        <!--  Header Starts-->
        <RelativeLayout android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="@layout/header_entryform"
            android:paddingTop="5dip"
            android:paddingBottom="5dip"
            android:weightSum="1"
            android:layout_alignParentTop="true">
            <!-- Logo Start-->
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="115dp"
                android:src="@drawable/logicsucces" />

            <!-- Logo Ends -->

            <!-- Login Form -->
            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dip"
                android:layout_marginTop="100dp">
                <!--  Email Label -->
                <TextView android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#372c24"
                    android:text="@string/email_entryform"/>
                <EditText android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:layout_marginBottom="20dip"
                    android:maxLines="1"
                    android:inputType="textEmailAddress"/>
                <!--  Password Label -->
                <TextView android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#372c24"
                    android:text="@string/password_entryform"/>
                <EditText android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:maxLines="1"
                    android:inputType="textPassword"/>
                <!-- Login button -->
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    <Button
                        android:id="@+id/angry_btn"

                        android:text="@string/login_entryform"
                        android:textColor="#60AB96"
                        android:textSize="25sp"
                        android:textAllCaps="false"
                        android:layout_marginTop="18dp"
                        android:layout_width="fill_parent"
                        android:layout_centerInParent="true"
                        android:layout_height="40dp"
                        android:background="@layout/button_entryform"
                        android:layout_alignParentTop="true"
                        android:onClick="doLogin"/>
                    </RelativeLayout>
                <!-- Login button -->
                <!-- Link to Registration Screen -->
                <!-- Link to Registration Screen -->
                <TextView
                    android:id="@+id/link_to_register"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="40dip"
                    android:layout_marginTop="40dip"
                    android:gravity="center"
                    android:text="@string/question_entryform"
                    android:textColor="#5b4373"
                    android:textSize="20sp" />

            </LinearLayout>
        </RelativeLayout>
        <!--  Header Ends -->
        <!-- Footer Start -->
        <LinearLayout android:id="@+id/footer"
            android:layout_width="fill_parent"
            android:layout_height="180dp"
            android:background="@layout/footer_entryform"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
        </LinearLayout>
        <!-- Footer Ends -->
    </RelativeLayout>
</ScrollView>