<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/chat_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_height"

        android:background="@color/colorPrimary"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:visibility="visible"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <TextView
            android:id="@+id/chatTitle"
            style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/chat_title"
            android:textColor="#fff" />

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/chat"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="35dp"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"

        >

        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_send"
            android:id="@+id/fab"
            android:tint="@android:color/white"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            app:fabSize="mini"/>

        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_toStartOf="@+id/fab"
            android:layout_toLeftOf="@+id/fab"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true">
            
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/message_hint"
                android:id="@+id/inputs"/>

        </android.support.design.widget.TextInputLayout>

        <ListView
            android:id="@+id/list_of_message"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/fab"
            android:layout_marginTop="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:divider="@android:color/transparent"
            android:dividerHeight="16dp">

        </ListView>

    </RelativeLayout>

    <TextView
        android:id="@+id/not_loggedin_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/not_logged_text"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:visibility="invisible" />
</FrameLayout>