<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_height"

        android:background="?attr/colorPrimary"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:visibility="visible"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
            android:text="Регистрация"
            android:textColor="#fff" />
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="@dimen/top_view_margin"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff">
            <!--  Header Starts-->
            <RelativeLayout
                android:id="@+id/header"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:background="#545454"
                android:paddingBottom="5dip"
                android:paddingTop="5dip"
                android:weightSum="1">

                <!-- Registration Form -->
                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical"
                    android:padding="10dip">
                    <!--android:layout_below="@id/header">-->
                    <!-- Full Name Label -->
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/UserName"
                        android:textColor="#ffffff" />

                    <EditText
                        android:id="@+id/reg_fullname"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dip"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="5dip"
                        android:maxLines="1"
                        android:textColor="@color/cpb_white" />
                    <!--  Email Label -->
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/emailreg"
                        android:textColor="#ffffff" />
                    <!-- Password Label -->

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="10dp"
                            android:layout_marginStart="10dp">

                            <EditText
                                android:id="@+id/reg_email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:textColor="@color/cpb_white" />

                            <Spinner
                                android:id="@+id/emailList"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end"
                                android:entries="@array/emailAddition"
                                android:textColor="#ffffff" />
                        </TableRow>

                    </TableLayout>

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="3dp"
                        android:text="@string/passwordreg"
                        android:textColor="#ffffff" />

                    <EditText
                        android:id="@+id/reg_password"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dip"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="5dip"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textColor="@color/cpb_white" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/registration_again"
                        android:textColor="#ffffff" />

                    <EditText
                        android:id="@+id/reg_password1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="5dip"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textColor="@color/cpb_white" />
                    <!-- Register Button -->
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Button
                            android:id="@+id/btnRegister"
                            android:layout_width="fill_parent"
                            android:layout_height="40dp"
                            android:layout_alignParentTop="true"
                            android:layout_centerInParent="true"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginTop="18dp"
                            android:background="@layout/button_login_and_registration"
                            android:text="@string/registration_registrate"
                            android:textAllCaps="false"
                            android:textColor="#ffffff"
                            android:textSize="23sp" />
                    </RelativeLayout>
                    <!-- Link to Login Screen -->
                    <TextView
                        android:id="@+id/link_to_login"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="40dip"
                        android:layout_marginTop="40dip"
                        android:gravity="center"
                        android:text="@string/backtoregistration"
                        android:textColor="#f3f3f3"
                        android:textSize="15sp" />
                    <!-- Registration Form Ends -->
                    <!-- Login button -->
                    <!-- Link to Registration Screen -->

                </LinearLayout>
            </RelativeLayout>
            <!--  Header Ends -->
            <!-- Footer Start -->
            <LinearLayout
                android:id="@+id/footer"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"></LinearLayout>
            <!-- Footer Ends -->
        </RelativeLayout>
    </ScrollView>

</FrameLayout>